--- a/docs/src/examples/custom-styling.css
+++ b/docs/src/examples/custom-styling.css
@@ -1,8 +1,8 @@
 .custom-overlay {
-  background: rgba(36, 123, 160, 0.7);
+  background: rgba(36, 123, 160, 0.7) !important;
 }
 .custom-modal {
-  background: #b2dbbf;
-  max-width: 500px;
+  background: #b2dbbf !important;
+  max-width: 500px !important;
   width: 100%;
 }
