--- a/docs/examples/custom-styling.css
+++ b/docs/examples/custom-styling.css
@@ -1,7 +1,7 @@
-.custom-overlay {
+.customOverlay {
   background: rgba(36, 123, 160, 0.7);
 }
-.custom-modal {
+.customModal {
   background: #b2dbbf;
   max-width: 500px;
   width: 100%;
