Fix center limitation when modal is bigger than the screen

--- a/src/styles.css
+++ b/src/styles.css
@@ -23,6 +23,7 @@
   background: #ffffff;
   background-clip: padding-box;
   box-shadow: 0 12px 15px 0 rgba(0, 0, 0, 0.25);
+  margin: auto;
 }
 .closeButton {
   position: absolute;
