--- a/src/styles.css
+++ b/src/styles.css
@@ -12,9 +12,6 @@
   z-index: 1000;
   padding: 1.2rem;
 }
-.overlayCenter {
-  align-items: center;
-}
 .modal {
   max-width: 800px;
   position: relative;
@@ -22,6 +19,9 @@
   background: #ffffff;
   background-clip: padding-box;
   box-shadow: 0 12px 15px 0 rgba(0, 0, 0, 0.25);
+  margin: 0 auto;
+}
+.modalCenter {
   margin: auto;
 }
 .closeButton {
