--- a/src/styles.css
+++ b/src/styles.css
@@ -15,7 +15,7 @@
 .modal {
   max-width: 800px;
   position: relative;
-  padding: 1.2rem;
+  padding: 1.2rem 3rem;
   background: #ffffff;
   background-clip: padding-box;
   box-shadow: 0 12px 15px 0 rgba(0, 0, 0, 0.25);
