--- a/src/styles.css
+++ b/src/styles.css
@@ -35,17 +35,17 @@
 }
 .closeIcon {
 }
-.transitionEnter {
+.transitionEnter, .overlayTransitionEnter {
   opacity: 0.01;
 }
-.transitionEnterActive {
+.transitionEnterActive, .overlayTransitionEnterActive {
   opacity: 1;
   transition: opacity 500ms cubic-bezier(0.23, 1, 0.32, 1);
 }
-.transitionExit {
+.transitionExit, .overlayTransitionExit {
   opacity: 1;
 }
-.transitionExitActive {
+.transitionExitActive, .overlayTransitionExitActive {
   opacity: 0.01;
   transition: opacity 500ms cubic-bezier(0.23, 1, 0.32, 1);
 }
