remove react-transition-group deps

--- a/mylib/src/styles.css
+++ b/mylib/src/styles.css
@@ -1,4 +1,4 @@
-.overlay {
+.react-responsive-modal-overlay {
   background: rgba(0, 0, 0, 0.75);
   display: flex;
   align-items: flex-start;
@@ -13,7 +13,7 @@
   padding: 1.2rem;
 }
 
-.modal {
+.react-responsive-modal-modal {
   max-width: 800px;
   position: relative;
   padding: 1.2rem;
@@ -23,11 +23,11 @@
   margin: 0 auto;
 }
 
-.modalCenter {
+.react-responsive-modal-modalCenter {
   margin: auto;
 }
 
-.closeButton {
+.react-responsive-modal-closeButton {
   position: absolute;
   top: 14px;
   right: 14px;
@@ -37,28 +37,7 @@
   display: flex;
 }
 
-.closeIcon {
-}
-
-.transitionEnter {
-  opacity: 0.01;
-}
-
-.transitionEnterActive {
-  opacity: 1;
-  transition: opacity 500ms cubic-bezier(0.23, 1, 0.32, 1);
-}
-
-.transitionExit {
-  opacity: 1;
-}
-
-.transitionExitActive {
-  opacity: 0.01;
-  transition: opacity 500ms cubic-bezier(0.23, 1, 0.32, 1);
-}
-
-@keyframes fadeIn {
+@keyframes react-responsive-modal-fadeIn {
   0% {
     opacity: 0;
   }
@@ -67,7 +46,7 @@
   }
 }
 
-@keyframes fadeOut {
+@keyframes react-responsive-modal-fadeOut {
   0% {
     opacity: 1;
   }
