--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 }
 
 .react-responsive-modal-overlay {
-  background: rgba(0, 0, 0, 0.50);
+  background: rgba(0, 0, 0, 0.5);
   position: fixed;
   top: 0;
   bottom: 0;
@@ -58,7 +58,7 @@
   display: flex;
 }
 
-@keyframes react-responsive-modal-fadeIn {
+@keyframes react-responsive-modal-overlay-in {
   0% {
     opacity: 0;
   }
@@ -67,11 +67,33 @@
   }
 }
 
-@keyframes react-responsive-modal-fadeOut {
+@keyframes react-responsive-modal-overlay-out {
   0% {
     opacity: 1;
   }
   100% {
+    opacity: 0;
+  }
+}
+
+@keyframes react-responsive-modal-modal-in {
+  0% {
+    transform: scale(0.95);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(100%);
+    opacity: 1;
+  }
+}
+
+@keyframes react-responsive-modal-modal-out {
+  0% {
+    transform: scale(100%);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(0.95);
     opacity: 0;
   }
 }
