feat: new documentation website ✨ (#450)

--- a/website/src/examples/custom-animation.css
+++ b/website/src/examples/custom-animation.css
@@ -1,3 +1,4 @@
+/* examples/custom-animation.css */
 @keyframes customEnterAnimation {
   0% {
     transform: scale(0);
@@ -6,7 +7,6 @@
     transform: scale(1);
   }
 }
-
 @keyframes customLeaveAnimation {
   0% {
     transform: scale(1);
