fix custom animation example

--- a/website/src/examples/custom-animation.css
+++ b/website/src/examples/custom-animation.css
@@ -1,5 +1,6 @@
 /* examples/custom-animation.css */
-@keyframes customEnterAnimation {
+
+@keyframes customEnterOverlayAnimation {
   0% {
     transform: scale(0);
   }
@@ -7,11 +8,28 @@
     transform: scale(1);
   }
 }
-@keyframes customLeaveAnimation {
+@keyframes customLeaveOverlayAnimation {
   0% {
     transform: scale(1);
   }
   100% {
     transform: scale(0);
+  }
+}
+
+@keyframes customEnterModalAnimation {
+  0% {
+    transform: scale(0.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@keyframes customLeaveModalAnimation {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0.2);
   }
 }
