start migrating website

--- a/website/src/styles/index.css
+++ b/website/src/styles/index.css
@@ -1,6 +1,5 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+@import 'tailwindcss';
+@plugin "@tailwindcss/typography";
 
 /* purgecss start ignore */
 body {
